on games.html fixed footer issue by adding margin top 40% to footer to stop it overflowing onto the cards on smaller devices

--- a/assets/games.css
+++ b/assets/games.css
@@ -283,7 +283,7 @@ p{
   border-top: 1px solid slategrey;
   width: 100%;
   bottom: 0;
-  margin-top: 20%;
+  margin-top: 40%;
   opacity: 0.9;
 }
 
